[package]
name = "reb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
owo-colors = "3.5.0"
tabled = { version = "0.14.0", features = ["color"]}
